--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "ngl.mock",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "devDependencies": {
-    "gulp": "*",
-    "gulp-eslint": "*",
-    "del": "*"
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0"
   },
   "scripts": {
     "setup": "npm install",
     "upgrade": "npm update",
-    "lint":"gulp lint",
-    "test":"gulp test",
+    "lint": "gulp lint",
+    "test": "gulp test",
     "build": "gulp build"
   }
 }
