--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.3.0",
   "devDependencies": {
     "del": "^2.2.0",
+    "expect.js": "^0.3.1",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^2.0.0"
+    "gulp-eslint": "^2.0.0",
+    "gulp-mocha": "^2.2.0"
   },
   "scripts": {
     "setup": "npm install",
