--- a/package.json
+++ b/package.json
@@ -1,18 +1,39 @@
 {
-  "name": "ngl.mock",
-  "version": "0.6.4",
+  "name": "ng-mock",
+  "version": "0.7.0",
+  "description": "Angular unit testing made easy",
+  "main": "src/ng-mock.js",
   "devDependencies": {
     "del": "^2.2.0",
     "expect.js": "^0.3.1",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
-    "gulp-mocha": "^2.2.0"
+    "gulp-mocha": "^2.2.0",
+    "husky": "^0.11.4"
   },
   "scripts": {
     "setup": "npm install",
     "upgrade": "npm update",
     "lint": "gulp lint",
     "test": "gulp test",
-    "build": "gulp build"
-  }
+    "build": "gulp build",
+    "precommit": "npm test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pfraces/ng-mock.git"
+  },
+  "keywords": [
+    "angular",
+    "module",
+    "mock",
+    "unit",
+    "test"
+  ],
+  "author": "Pau Fracés <pfraces@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/pfraces/ng-mock/issues"
+  },
+  "homepage": "https://github.com/pfraces/ng-mock#readme"
 }
