--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-mocha": "^2.2.0",
-    "husky": "^0.11.4"
+    "husky": "^0.11.4",
+    "mversion": "^1.10.1"
   },
   "scripts": {
     "setup": "npm install",
@@ -17,7 +18,10 @@
     "lint": "gulp lint",
     "test": "gulp test",
     "build": "gulp build",
-    "precommit": "npm test"
+    "precommit": "npm test",
+    "patch": "mversion patch -mn",
+    "minor": "mversion minor -mn",
+    "major": "mversion major -mn"
   },
   "repository": {
     "type": "git",
