--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "expect.js": "^0.3.1",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
+    "gulp-istanbul": "^0.10.4",
     "gulp-mocha": "^2.2.0",
     "husky": "^0.11.4",
     "mversion": "^1.10.1"
