--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: node_js
 node_js:
   - "node"
+addons:
+  code_climate:
+      repo_token: 29e0e1e8ee405f28c675820d8048e7c2a5b68fe355444184dfc3299608b4827f
