--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ addons:
       repo_token: 29e0e1e8ee405f28c675820d8048e7c2a5b68fe355444184dfc3299608b4827f
 after_script:
   - npm run codeclimate
+notifications:
+  email: false
